--- a/index.html
+++ b/index.html
@@ -356,14 +356,14 @@
                <div class="col-md-4 col-sm-4">
                 <div class="contact-us-detail">  
                  <i class="fa fa-mobile color-6"></i>
-                  <p><a href="tel:+1234567890">+1234 567 890</a></p>
+                  <p><a href="tel:+1234567890">+923493862587</a></p>
                  </div>
                 </div>
                
                <div class="col-md-4 col-sm-4">
                 <div class="contact-us-detail">
                  <i class="fa fa-mail-reply color-5"></i>
-                  <p><a href="mailto:name@domain.com">name@domain.com</a></p>
+                  <p><a href="mailto:name@domain.com">rohitkumar7480622@gmail.com</a></p>
                  </div>
                 </div>
                  
